added basic search functionality, ability to delete gifs that return from search

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
-// @import "partials/meyer-reset.scss";
+
+// @import "bourbon/bourbon.scss";
 @import "../../font-awesome-4.6.3/scss/font-awesome.scss";
 @import "partials/normalize.scss";
+@import "partials/mixins.scss";
 @import "partials/responsiveGrid.scss";
 @import "partials/flex-content.scss";
+@import "partials/aside.scss"
