--- a/src/styles/partials/_flex-content.scss
+++ b/src/styles/partials/_flex-content.scss
@@ -1,7 +1,3 @@
-img {
-  border-radius: 10px;
-  margin: 2px;
-}
 
 
 .flex-container {
@@ -10,18 +6,29 @@ img {
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: stretch;
-
 }
 
 .flex-item {
-  flex-grow: .5;
-}
+  position: relative;
+  display: flex;
+  border-radius: 10px;
+  margin: 2px;
+  background: $pale-aqua;
 
-//
-// .gif-container {
-//   margin: 2px;
-//   border-radius: 5px;
-//
-//
-// }
+  img {
+    border-radius: 8px 40px 8px 8px;
+    margin: 4px;
+  }
+
+    a {
+      font-size: 12px;
+      position: absolute;
+      right: 5px;
+      top: 2.5px;
+      color: white;
+
+      &:hover {
+        color: black;
+      }
+    }
+}
