--- a/src/styles/partials/_flex-content.scss
+++ b/src/styles/partials/_flex-content.scss
@@ -2,8 +2,8 @@
 
 .flex-container {
   display: flex;
-  align-content: flex-start;
-  justify-content: center;
+  align-content: center;
+  justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
 }
