--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,4 +5,5 @@
 @import "partials/mixins.scss";
 @import "partials/responsiveGrid.scss";
 @import "partials/flex-content.scss";
-@import "partials/aside.scss"
+@import "partials/aside.scss";
+@import "partials/templates.scss"
