--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,11 @@
 
 // @import "bourbon/bourbon.scss";
 @import "../../font-awesome-4.6.3/scss/font-awesome.scss";
-@import "partials/normalize.scss";
+@import "partials/meyer-reset.scss";
+// @import "partials/normalize.scss";
 @import "partials/mixins.scss";
 @import "partials/responsiveGrid.scss";
 @import "partials/flex-content.scss";
+@import "partials/nav.scss";
 @import "partials/aside.scss";
 @import "partials/templates.scss"
