--- a/src/styles/partials/_aside.scss
+++ b/src/styles/partials/_aside.scss
@@ -1,16 +1,13 @@
 aside {
-  div {
-
-    background: white;
 
      div.flex-container {
          display: flex;
          align-content: center;
          justify-content: flex-end;
          text-align: right;
+         align-items: center;
         //  flex-wrap: nowrap;
      }
-  }
 }
 
 aside {
