menu toggles and slides

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,4 +8,4 @@
 @import "partials/flex-content.scss";
 @import "partials/nav.scss";
 @import "partials/aside.scss";
-@import "partials/templates.scss"
+@import "partials/templates.scss";
