--- a/src/styles/partials/_aside.scss
+++ b/src/styles/partials/_aside.scss
@@ -1,48 +1,60 @@
-aside {
 
-     div.flex-container {
-         display: flex;
-         align-content: center;
-         justify-content: flex-end;
-         text-align: right;
-         align-items: center;
-        //  flex-wrap: nowrap;
-     }
-}
+    //
+    // div.flex-container {
+    //      display: flex;
+    //      align-content: center;
+    //      justify-content: flex-end;
+    //      text-align: right;
+    //      align-items: center;
+    //
+    //     //  flex-wrap: nowrap;
+    //  }
 
-aside {
+
+
+  div.search-form {
+    border-radius: 0px 0px 30px 30px;
+    background-color: $pale-aqua;
+    display: none;
+    text-align: center;
+  }
+
+
+
 input {
+  border-radius: 5px;
   outline: none;
   margin-right: 5px;
   padding: 8px;
-  // width: 50%;
-  min-width: 100px;
+  width: 60%;
+  min-width: 200px;
   border: 1px solid $pale-aqua;
-  // font-family: sans-serif, FontAwesome;
+    &:hover {
+      border-color: #ccc;
+    }
+
 }
 
-button {
+button.search-button {
   outline: none;
   width: 100px;
-  height: 40px;
+  // height: 40px;
   margin: 5px;
-  padding: 10px;
+  // padding: 10px;
   border-radius: 20px;
-  color: $pale-aqua;
+  color: white;
   font-size: 12px;
   letter-spacing: 1px;
-  background-color: white;
-  border: 2px solid $pale-aqua;
+  background-color: $pale-aqua;
+  border: 2px solid white;
     &:hover {
-      color: white;
-      background: $pale-aqua;
+      color: $pale-aqua;
+      background: white;
+      border: 2px solid $pale-aqua;
     }
     &:active {
       position: relative;
       top: 1px;
+      letter-spacing: 2px;
     }
-}
-button.more-button {
-  width: 150px;
-}
 }
