--- a/src/styles/partials/_templates.scss
+++ b/src/styles/partials/_templates.scss
@@ -7,11 +7,11 @@
   align-items: center;
     button {
       outline: none;
-      height: 40px;
+      // height: 40px;
       width: 150px;
       margin: 5px;
       margin-top: 70px;
-      padding: 10px;
+      // padding: 10px;
       border-radius: 20px;
       color: $pale-aqua;
       font-size: 12px;
@@ -25,6 +25,7 @@
         &:active {
           position: relative;
           top: 1px;
+          letter-spacing: 2px;
         }
     }
     }
@@ -38,10 +39,10 @@
 
     button.more-button {
         outline: none;
-        height: 40px;
+        // height: 40px;
         width: 200px;
-        margin: 5px;
-        padding: 10px;
+        margin: 5px 10px;
+        // padding: 10px;
         border-radius: 20px;
         color: $pale-aqua;
         font-size: 12px;
@@ -55,5 +56,29 @@
           &:active {
             position: relative;
             top: 1px;
+            letter-spacing: 2px;
     }
   }
+
+  button.clear-button {
+      outline: none;
+      // height: 40px;
+      width: 100px;
+      margin: 5px 10px;
+      // padding: 10px;
+      border-radius: 20px;
+      color: $pale-aqua;
+      font-size: 12px;
+      letter-spacing: 1px;
+      background-color: white;
+      border: 2px solid $pale-aqua;
+        &:hover {
+          color: white;
+          background: $pale-aqua;
+        }
+        &:active {
+          position: relative;
+          top: 1px;
+          letter-spacing: 2px;
+  }
+}
