--- a/src/styles/partials/_templates.scss
+++ b/src/styles/partials/_templates.scss
@@ -1,7 +1,8 @@
 
 
 .landing-container {
-//
+  
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,6 +24,7 @@
           background: $pale-aqua;
         }
         &:active {
+          // @include animation(scale 1.0s ease-in);
           position: relative;
           top: 1px;
           letter-spacing: 2px;
