--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,6 @@
 @import "partials/aside.scss";
 @import "partials/templates.scss";
 
-body {
-  background-image: url(../../images/cork_1.png);
-}
+// body {
+//   background-image: url(../../images/cork_1.png);
+// }
