--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,9 +1,10 @@
 
 // add project mixins here:
-//
-// $pale-aqua: #A1E3DF;
 
-// $pale-aqua: #9DD7D7;
-// $pale-aqua: #A3A8BE;
 
-$pale-aqua: #A9BDCF;
+$base-background: rgba(197,197,197,0.5);
+
+$action: #F5059D;
+
+
+@import url('https://fonts.googleapis.com/css?family=Raleway');
