--- a/src/styles/partials/_templates.scss
+++ b/src/styles/partials/_templates.scss
@@ -1,92 +1,60 @@
-
 main {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
+    font-family: 'Raleway', sans-serif;
 }
 
+.button {
+  outline: none;
+  margin: 25px 15px 10px 15px;
+  color: #000;
+  background-color: transparent;
+  font-family: inherit;
+  font-size: 16px;
+  border: none;
 
-
-
-.landing-container {
-
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-    button {
-      outline: none;
-      // height: 40px;
-      width: 150px;
-      margin: 5px;
-      margin-top: 70px;
-      // padding: 10px;
-      border-radius: 20px;
-      color: $pale-aqua;
-      font-size: 12px;
-      letter-spacing: 1px;
-      background-color: white;
-      border: 2px solid $pale-aqua;
-        &:hover {
-          color: white;
-          background: $pale-aqua;
-        }
-        &:active {
-          // @include animation(scale 1.0s ease-in);
-          position: relative;
-          top: 1px;
-          letter-spacing: 2px;
-        }
-    }
-    }
-
-    .more-button-container {
-      display: flex;
-      justify-content: center;
-      // text-align: right;
-      align-content: center;
-    }
-
-    button.more-button {
-        outline: none;
-        // height: 40px;
-        width: 200px;
-        margin: 5px 10px;
-        // padding: 10px;
-        border-radius: 20px;
-        color: $pale-aqua;
-        font-size: 12px;
-        letter-spacing: 1px;
-        background-color: white;
-        border: 2px solid $pale-aqua;
-          &:hover {
-            color: white;
-            background: $pale-aqua;
-          }
-          &:active {
-            position: relative;
-            top: 1px;
-            letter-spacing: 2px;
-    }
+  &:hover {
+      color: $action;
+      cursor: pointer;
   }
 
-  button.clear-button {
-      outline: none;
-      // height: 40px;
-      width: 100px;
-      margin: 5px 10px;
-      // padding: 10px;
-      border-radius: 20px;
-      color: $pale-aqua;
-      font-size: 12px;
-      letter-spacing: 1px;
-      background-color: white;
-      border: 2px solid $pale-aqua;
-        &:hover {
-          color: white;
-          background: $pale-aqua;
-        }
-        &:active {
-          position: relative;
-          top: 1px;
-          letter-spacing: 2px;
+  &:active {
+      color: $action;
+      position: relative;
+      top: 1px;
   }
+
+  @media screen and (min-width: 500px) {
+      font-size: 18px;
+  }
+
+}
+
+.landing-title {
+  text-align: center;
+  margin-top: 100px;
+  font-size: 22px;
+  padding: 0 10px;
+}
+
+.more-button-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.loading {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-icon {
+    color: $action;
+}
+.hidden {
+    display: none;
 }
