--- a/src/styles/partials/_templates.scss
+++ b/src/styles/partials/_templates.scss
@@ -29,11 +29,58 @@ main {
 
 }
 
+.landing-container {
+  // display: flex;
+  // flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+
+
 .landing-title {
+  display: none;
+  width: 100%;
+  color: $action;
   text-align: center;
   margin-top: 100px;
   font-size: 22px;
   padding: 0 10px;
+}
+
+.landing-item {
+  width: calc(94%/3);
+  height: auto;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  border: 4px solid $base-background;
+  margin: 1%;
+  background: $base-background;
+  transition: ease;
+
+  .landing-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px 40px 8px 8px;
+    // margin: 4%;
+  }
+
+  a {
+    font-size: 12px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #000;
+
+    &:hover {
+      color: $action;
+      cursor: pointer;
+    }
+  }
+
 }
 
 .more-button-container {
