--- a/src/styles/partials/_flex-content.scss
+++ b/src/styles/partials/_flex-content.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url("/images/cork_1.png");
+  background-image: url("images/cork_1.png");
 }
 
 
@@ -47,7 +47,6 @@ body {
       color: $action;
       cursor: pointer;
     }
-
-}
+  }
 
 }
