--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,10 +1,4 @@
-
 // add project mixins here:
-
-
-$base-background: rgba(197,197,197,0.5);
-
+$base-background: #ccc;
 $action: #F5059D;
-
-
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url( 'https://fonts.googleapis.com/css?family=Raleway');
