--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,6 @@
 
-@import "bourbon/bourbon.scss";
-@import "../../font-awesome-4.6.3/scss/font-awesome.scss";
 @import "partials/meyer-reset.scss";
+@import "../../font-awesome-4.6.3/css/font-awesome.min.css";
 @import "partials/mixins.scss";
-@import "partials/flex-content.scss";
 @import "partials/nav.scss";
-@import "partials/templates.scss";
+@import "partials/content.scss";
